data/derived/comb/progs/unify/prog2148.ml.out
Characters 63-64:
  | (h::t) -> t;;
              ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
